mt fix form checkbox label spacing

--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -122,7 +122,7 @@ main .form input[type="radio"] + label {
 }
 
 main .form .form-checkbox-option > label {
-  padding-left: 42px;
+  width: 26px;
 }
 
 main .form .form-checkbox-option > label::before {
